--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,30 @@
+.group h2 {
+	font-size: 2.56rem;
+	text-align: center;
+}
+.cardCont {
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-gap: 10px;
+	padding: 5px 20px;
+}
+
+.collection {
+	margin: 1.2rem 0 1rem 0;
+}
 .collection .collection-item {
 	padding: 15px 20px;
+}
+
+@media (min-width: 575.98px) {
+	.cardCont {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media (min-width: 767.98px) {
+	.cardCont {
+		grid-template-columns: repeat(3, 1fr);
+		grid-gap: 35px;
+	}
 }
